Fixed missing border style on main card for winter weather.

--- a/src/components/MainCard/MainCard.module.scss
+++ b/src/components/MainCard/MainCard.module.scss
@@ -108,6 +108,10 @@
 .winter {
   background-color: #fafafa;
   color: #1b1b1b;
+
+  .info {
+    border-top: solid 2px hsla(0, 0%, 11%, 0.8);
+  }
 }
 
 .windy {
